# jsonrpc-lean

./: .gitignore  .gitmodules  .travis.yml  Doxyfile.in  Makefile.am  README.md  configure.ac  pc.in
examples/: json11.cpp  testclient.cpp  testserver.cpp
include/: json11.hpp
include/jsonrpc-lean/: client.h  formathandler.h  jsonformathandler.h  jsonreader.h  jsonwriter.h  request.h  response.h  server.h  util.h  value.h
src/: Makefile.am  json11.hpp
src/jsonrpc-lean/: client.h  dispatcher.h  fault.h  json.h  jsonreader.h  request.h  response.h  server.h  util.h  value.h
test/: Makefile.am  test_client.cpp  test_server.cpp
